[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/enemies/tomate.png" type="Texture" id=1]
[ext_resource path="res://scripts/TowerTomato.gd" type="Script" id=2]
[ext_resource path="res://scennes/HpBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 126, 98 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "atack"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atack"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 822.176

[node name="TowerTomato" type="Area2D" groups=["ENEMY"]]
z_index = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -14, 47 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/atack = SubResource( 6 )
anims/idle = SubResource( 5 )

[node name="HpBar" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -191 )
scale = Vector2( 2, 2 )
background_color = Color( 0.709804, 0.0862745, 0.321569, 1 )

[node name="BulletPosition2D" type="Position2D" parent="."]
position = Vector2( -2, 3 )

[node name="SensorArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensorArea2D"]
shape = SubResource( 3 )

[connection signal="area_entered" from="SensorArea2D" to="." method="_on_SensorArea2D_area_entered"]
[connection signal="area_exited" from="SensorArea2D" to="." method="_on_SensorArea2D_area_exited"]
